Fix shader loading inside fat JAR